[tool.poetry]
name = "into_dl"
version = "0.1.0"
description = ""
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.8.4"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.1"
ipdb = "^0.13.4"
